--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
   font-family: "Roboto", "Arial", sans-serif;
   font-size: 16px;
   line-height: 22px;
-  font-weight: 400;
+  font-weight: 700;
   color: #ffffff;
   text-transform: none;
 
@@ -20,3 +20,369 @@ body {
   margin: -1px;
   clip: rect(0 0 0 0);
 }
+
+a {
+  text-decoration: underline;
+}
+
+.button {
+  color: #ffffff;
+  text-decoration: none;
+  background-color: #ec583c;
+}
+
+
+/* ------- Header ------- */
+
+.main-navigation {
+  font-size: 16px;
+  line-height: 18px;
+  font-weight: 700;
+}
+
+/* Both right & left lists of navigation  */
+.site-navigation,
+.client-navigation-list {
+  list-style: none;
+  display: flex;
+}
+
+.site-navigation a,
+.client-navigation-list a {
+  color: #ffffff;
+}
+
+/* Popup in header */
+.site-subnavi-list {
+  list-style: none;
+  display: none;
+}
+
+.site-subnavi-list a {
+  text-decoration: none;
+  color: #000000;
+
+  font-size: 14px;
+  line-height: 16px;
+}
+
+/* Navigation on the right */
+.client-navigation-list {
+  font-size: 14px;
+  line-height: 16px;
+  font-weight: 500;
+}
+
+.client-navigation-list li > a {
+  color: #ffffff;
+  text-decoration: none
+}
+
+.header-login,
+.header-basket {
+  background-color: #a1b6ab;
+  border-radius: 50%;
+}
+
+/* Header: open hours & phone */
+.opening-hours {
+  color: #ffffff;
+  font-size: 14px;
+  line-height: 16px;
+  font-weight: 700;
+}
+
+.telephone {
+  color: #ffffff;
+  font-size: 22px;
+  line-height: 24px;
+}
+
+
+/* ------- Intro-slider ------- */
+
+
+.intro-slider h2 {
+  font-size: 60px;
+  line-height: 60px;
+}
+
+.slider-list {
+  list-style: none;
+}
+
+.slider-button {
+  font-size: 32px;
+  line-height: 44px;
+  padding: 13px 40px;
+  border-radius: 30px;
+}
+
+
+/* ------- Announces ------- */
+
+
+.announces {
+  display: flex;
+}
+
+.announce-raspberry {
+  width: 560px;
+  min-height: 230px;
+  background-color: #c1002f;
+  background: url("../img/bg-raspberry.jpg") no-repeat;
+  border-radius: 20px;
+}
+
+.announce-chocolate {
+  width: 560px;
+  min-height: 230px;
+  background-color: #71452a;
+  background: url("../img/bg-chocolate.jpg") no-repeat;
+  border-radius: 20px;
+}
+
+.announces h3 {
+  font-size: 35px;
+  line-height: 41px;
+}
+
+.announces p {
+  font-size: 18px;
+  line-height: 22px;
+}
+
+.announces-button {
+  font-size: 18px;
+  line-height: 24px;
+  padding: 13px 22px;
+  border-radius: 30px;
+}
+
+
+/* ------- Offers ------- */
+
+
+.offer-hits {
+  list-style: none;
+  display: flex;
+  width: 1146px; /* временная ширина, она потом будет контейнером задаваться для всех элементов */
+  justify-content: space-between;
+}
+
+.offer-item {
+  width: 267px;
+}
+
+.offers a {
+  font-size: 16px;
+  line-height: 22px;
+  font-weight: 500;
+  display: block;
+}
+
+.offer-price {
+  font-size: 45px;
+  line-height: 45px;
+}
+
+.offer-price span {
+  font-size: 30px;
+}
+
+
+/* ------- Features ------- */
+
+
+.features {
+  background-image: url("../img/waffel.jpg");
+  background-color: #efe3cb;
+}
+
+.features h3 {
+  font-size: 24px;
+  line-height: 30px;
+  font-weight: 500;
+  color: #000000;
+}
+
+.features p {
+  font-size: 16px;
+  line-height: 22px;
+  font-weight: 400;
+  color: #000000;
+}
+
+.features-list {
+  list-style: none;
+}
+
+
+/* ------- blog-newsletter ------- */
+
+
+.blog-newsletter {
+  display: flex;
+}
+
+.blog-news {
+  background-color: #ffffff;
+  background-image: url("../img/bg-strawberry.jpg");
+  width: 560px;
+  min-height: 220px;
+}
+
+.blog-newsletter h3 a {
+  font-size: 24px;
+  line-height: 30px;
+  color: #000000;
+}
+
+.blog-newsletter b {
+  font-size: 16px;
+  line-height: 22px;
+  font-weight: 500;
+  color: #000000;
+}
+
+.newsletter {
+  background-color: #f8f7f4;
+  width: 560px;
+  min-height: 220px;
+}
+
+.newsletter p {
+  font-size: 16px;
+  line-height: 22px;
+  font-weight: 400;
+  color: #000000;
+}
+
+.newsletter-form input {
+  background-color: #ffffff;
+  border: 1px solid #d3d3d2;
+}
+
+.newsletter-form input[placeholder] {
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
+  color: #d3d3d2;
+}
+
+.newsletter-button {
+  font-size: 18px;
+  line-height: 24px;
+  font-weight: 700;
+
+  padding: 13px 22px;
+  border-radius: 30px;
+}
+
+
+/* ------- map ------- */
+
+
+.map {
+  position: relative;
+}
+
+.map-image {
+  width: 100%;
+  height: 430px;
+  overflow: hidden;
+}
+
+.address {
+  background-color: #ffffff;
+  color: #000000;
+  width: 303px;
+  height: 306px;
+
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.address-map {
+  font-size: 14px;
+  line-height: 20px;
+  font-weight: 400;
+}
+
+.telephone {
+  color: #000000;
+  text-decoration: none;
+  display: block;
+  font-size: 18px;
+  line-height: 22px;
+  font-weight: 700;
+}
+
+.address-details {
+  font-size: 18px;
+  line-height: 24px;
+  font-weight: 700;
+  display: block;
+}
+
+.hours-map {
+  font-size: 14px;
+  line-height: 22px;
+  font-weight: 400;
+}
+
+.button-feedback {
+  padding: 11px 28px;
+  border-radius: 30px;
+}
+
+.feedback-form {
+  display: none; /* временно скрою попап фидбека */
+}
+
+/* ------- Footer ------- */
+
+
+.social-list {
+  list-style: none;
+  display: flex;
+}
+
+.social-item {
+  width: 38px;
+  height: 38px;
+  background-color: #e6ebe9;
+  border: 3px solid #c2cec7;
+  border-radius: 50%;
+}
+
+.impressum {
+  font-size: 13px;
+  line-height: 18px;
+  font-weight: 400;
+}
+
+.impressum a {
+  color: #ffffff;
+}
+
+.docs-left-column a:first-child {
+  font-weight: 700;
+}
+
+.copyright-text {
+  font-size: 12px;
+  line-height: 18px;
+  font-weight: 400;
+}
+
+.copyright-text a {
+  color: #ffffff;
+}
+
+/*
+font-size: 16px;
+line-height: 18px;
+font-weight: 700;
+ */
