--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,7 @@ a {
   background-color: #ec583c;
   background-image: linear-gradient(#f47c5c, #e34e3a);
   box-shadow: 0 2px 2px 0 rgba(172, 16, 0, 0.6);
+  border-radius: 30px;
 }
 
 .button:hover,
@@ -92,6 +93,7 @@ a {
   margin: 0;
   padding: 0;
   display: flex;
+  justify-content: flex-start;
 }
 
 .site-navigation {
@@ -159,44 +161,196 @@ a {
   text-decoration: none
 }
 
+.client-navigation-item {
+  position: relative;
+  display: flex;
+}
+
+/* ------- Search popup ------- */
+
 .header-search {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
   width: 32px;
   height: 32px;
-  background-color: #a1b6ab;
-  display: block;
+
+  background-color: rgba(255, 255, 255, 0.2);
+
   border-radius: 50%;
   margin-right: 10px;
 }
 
-.header-login {
-  width: 92px;
-  height: 32px;
-  background-color: #a1b6ab;
-  display: block;
-  border-radius: 20px;
-  margin-right: 10px;
-  text-align: center;
-  vertical-align: middle;
-  line-height: 32px;
+.header-search:hover,
+.header-search:focus {
+  background-color: #ffffff;
+  opacity: 1;
 }
 
+.header-search:hover path,
+.header-search:focus path {
+  fill: #000000;
+}
+
+/* Popup itself */
 .search-modal {
   display: none;
+  position: absolute;
+  z-index: 5;
+  box-sizing: border-box;
+  padding: 20px 15px;
+  right: 10px;
+  top: 36px;
+  width: 342px;
+  height: 84px;
+  background-color: #f8f7f4;
+  border-radius: 10px;
+  box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.4);
 }
 
+.search-input-field {
+  display: block;
+  width: 100%;
+  border-radius: 5px;
+  box-sizing: border-box;
+  padding: 9px;
+  border: 1px solid #d3d3d2;
+
+  font-size: 14px;
+  line-height: 24px;
+  font-weight: 400;
+  color: #999999;
+}
+
+.header-search:hover + .search-modal {
+  display: block;
+}
+
+
+/* ------- Login popup ------- */
+
+.header-login {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  box-sizing: border-box;
+  padding: 6px 16px;
+  margin-right: 10px;
+
+  width: 92px;
+  height: 32px;
+  background-color: rgba(255, 255, 255, 0.2);
+  border-radius: 20px;
+  vertical-align: middle;
+  line-height: 32px;
+
+}
+
+.header-login-text {
+  order: 1;
+}
+
+.header-login path {
+  fill: #ffffff;
+}
+
+.header-login:hover,
+.header-login:focus {
+  background-color: #ffffff;
+  opacity: 1;
+  color: #000000;
+}
+
+.header-login:hover path {
+  fill: #000000;
+}
+
+.header-login:hover + .login-modal {
+  display: block;
+}
+
+/* Popup itself */
 .login-modal {
   display: none;
+  box-sizing: border-box;
+  width: 278px;
+  padding: 20px 19px;
+  background-color: #f8f7f4;
+  border-radius: 10px;
+  box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.4);
+
+  position: absolute;
+  content: "";
+  top: 36px;
+  right: 10px;
 }
 
-.header-basket {
+.client-navigation-input {
+  display: block;
+  width: 100%;
+  border: 1px solid #d3d3d2;
+  border-radius: 5px;
+  box-sizing: border-box;
+  padding: 9px;
+  margin-bottom: 20px;
+
+  font-size: 14px;
+  line-height: 24px;
+  font-weight: 400;
+  color: #999999;
+}
+
+.login-modal-actions {
+  display: flex;
+  flex-wrap: nowrap;
+}
+
+.button-enter {
   width: 100px;
+  box-sizing: border-box;
+  padding: 10px 25px;
+  font-size: 18px;
+  line-height: 24px;
+  font-weight: 700;
+  margin-right: 19px;
+}
+
+.client-navigation-links {
+  padding: 0;
+  margin: 0;
+}
+
+.client-navigation-links a {
+  color: #000000;
+  font-size: 13px;
+  line-height: 24px;
+  font-weight: 400;
+}
+
+/* ------- Basket popup ------- */
+
+.header-basket {
+  box-sizing: border-box;
+  /*width: 100px;*/
   height: 32px;
-  background-color: #a1b6ab;
+  padding: 6px 15px;
+  background-color: rgba(255, 255, 255, 0.2);
   display: block;
   border-radius: 20px;
   text-align: center;
   vertical-align: middle;
   line-height: 32px;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.header-basket-text {
+  order: 1;
+  margin-left: 8px;
 }
 
 .header-basket.basket-full {
@@ -204,10 +358,131 @@ a {
   color: #000000;
 }
 
+.header-basket.basket-full:hover + .basket-container-full {
+  display: block;
+}
+
 /* Full basket catalog.html */
 .basket-container-full {
   display: none;
+
+  position: absolute;
+  content: "";
+  top: 36px;
+  right: 0;
+
+  box-sizing: border-box;
+  width: 538px;
+  padding: 20px 15px;
+  background-color: #f8f7f4;
+  border-radius: 10px;
+  box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.4);
 }
+
+/* table of basket items */
+.basket-list {
+  font-size: 13px;
+  line-height: 16px;
+  font-weight: 400;
+  color: #000000;
+  padding: 0;
+  margin: 0;
+  margin-bottom: 16px;
+  border: none;
+  border-collapse: collapse;
+}
+
+.basket-list tbody {
+  padding: 0;
+  margin: 0;
+  border-bottom: 1px solid #cacac7;
+}
+
+.basket-item {
+  display: flex;
+  justify-content: flex-start;
+  position: relative;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.basket-cancel {
+  display: block;
+  width: 12px;
+  height: 12px;
+  margin-right: 14px;
+}
+
+.basket-cancel button {
+  border: none;
+  background-color: transparent;
+  padding: 0;
+}
+
+.basket-cancel::before {
+  content: url("../img/cross-small.svg");
+  width: 12px;
+  height: 12px;
+  display: inline-block;
+  padding: 0;
+}
+
+.basket-pic {
+  display: block;
+  width: 33px;
+  height: 33px;
+  margin-right: 14px;
+}
+
+.basket-item-img {
+  display: block;
+  width: 33px;
+  height: 33px;
+  border-radius: 50%;
+  overflow: hidden;
+}
+
+.basket-item-title {
+  width: 218px;
+  display: block;
+  padding: 0;
+  margin: 0;
+  margin-right: 30px;
+}
+
+.basket-quantity {
+  width: 100px;
+  margin-right: 23px;
+}
+
+.basket-quantity p,
+.basket-price p {
+  padding: 0;
+  margin: 0;
+}
+
+.basket-quantity span {
+  color: #999999;
+}
+
+.basket-full-price {
+  font-size: 15px;
+  line-height: 18px;
+  font-weight: 700;
+  text-align: right;
+  color: #000000;
+
+  padding-top: 15px;
+}
+
+.button-submit-order {
+  display: table;
+  width: 170px;
+  box-sizing: border-box;
+  padding: 10px 15px;
+  margin-left: auto;
+}
+
 
 /* Header: open hours & phone */
 .header-info {
@@ -264,7 +539,6 @@ a {
   font-size: 32px;
   line-height: 44px;
   padding: 10px 40px;
-  border-radius: 30px;
   vertical-align: middle;
 
   display: block;
@@ -292,16 +566,38 @@ a {
   margin-bottom: 6px;
 }
 
+.breadcrubms li {
+  margin-right: 22px;
+  position: relative;
+}
+
 .breadcrubms-link {
   color: #ffffff;
   font-size: 14px;
   line-height: 16px;
   font-weight: 400;
-  margin-right: 22px;
+}
+
+.breadcrubms li:last-child {
+  margin-right: 0;
+}
+
+.breadcrubms li::after {
+  position: absolute;
+  content: "";
+  width: 6px;
+  height: 6px;
+  top: 8px;
+  right: -14px;
+  background-image: url("../img/breadcrumbs-dividers.png");
 }
 
 .breadcrubms-link.current {
   text-decoration: none;
+}
+
+.breadcrubms li:last-child::after {
+  display: none;
 }
 
 /* ------- Announces ------- */
@@ -356,7 +652,6 @@ a {
   line-height: 24px;
   text-align: center;
   padding: 8px 21px 12px 22px;
-  border-radius: 30px;
 
   height: 46px;
 }
@@ -554,7 +849,6 @@ a {
   font-weight: 700;
 
   padding: 13px 22px;
-  border-radius: 30px;
 }
 
 
@@ -623,7 +917,6 @@ a {
 .button-feedback {
   box-sizing: border-box;
   padding: 11px 28px;
-  border-radius: 30px;
   display: block;
   width: 252px;
   height: 44px;
@@ -692,7 +985,6 @@ a {
   color: #ffffff;
   background-color: #a6b7ae;
   border: 2px solid #ffffff;
-  border-radius: 30px;
   padding: 7px 28px;
 }
 
