all deco elements and popups

--- a/css/style.css
+++ b/css/style.css
@@ -64,12 +64,14 @@ a {
   display: flex;
   justify-content: space-between;
   padding-top: 10px;
+  align-items: flex-start;
 }
 
 .inner-header {
   display: flex;
   justify-content: space-between;
   padding-top: 10px;
+  align-items: flex-start;
 }
 
 .main-header-logo {
@@ -93,12 +95,13 @@ a {
   margin: 0;
   padding: 0;
   display: flex;
-  justify-content: flex-start;
+  flex-direction:row;
 }
 
 .site-navigation {
   width: 676px;
   padding-top: 20px;
+  align-items: flex-start;
 }
 
 .site-navigation a,
@@ -107,13 +110,24 @@ a {
 }
 
 .site-navigation-item {
-  margin-right: 30px;
+  position: relative;
 }
 
 .site-navigation-item a {
   font-size: 16px;
   line-height: 18px;
-  font-weight: 400;
+  font-weight: 700;
+  padding: 8px 13px;
+  border-radius: 20px;
+  background-color: transparent;
+}
+
+.site-navigation-item a:hover {
+  background-color: #f7f6f3;
+  padding: 8px 13px;
+  border-radius: 20px;
+  text-decoration: none;
+  color: #000000;
 }
 
 .site-navigation-item-active .active {
@@ -123,12 +137,27 @@ a {
   text-decoration: none;
 }
 
+
+.site-navigation-item:first-child a:hover + .site-subnavi-list {
+  display: block;
+}
+
 /* Popup in header */
 .site-subnavi-list {
   list-style: none;
   margin: 0;
   padding: 0;
   display: none;
+  z-index: 5;
+
+  position: absolute;
+  top: 32px;
+  left: -7px;
+  width: 143px;
+  box-sizing: border-box;
+  background-color: #f8f7f4;
+  border-radius: 10px;
+  box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.4);
 }
 
 .site-subnavi-list a {
@@ -137,6 +166,58 @@ a {
 
   font-size: 14px;
   line-height: 16px;
+  display: block;
+  padding: 11px 20px 12px 20px;
+}
+
+.site-subnavi-item:last-child a {
+  padding-bottom: 15px;
+}
+
+.site-subnavi-item {
+  font-size: 14px;
+  line-height: 16px;
+  font-weight: 400;
+}
+
+.site-subnavi-item-new a {
+  font-weight: 700;
+}
+
+.site-subnavi-item-new b {
+  position: relative;
+}
+
+.site-subnavi-item-new b::after {
+  position: absolute;
+  content: "";
+  top: 27px;
+  left: -13px;
+  width: 128px;
+  height: 1px;
+  background-color: #d1d0ce;
+}
+
+.site-subnavi-item:hover,
+.site-subnavi-item:focus {
+  background-color: #fbded8;
+}
+
+.site-subnavi-item:active {
+  background-color: #f6b5a5;
+}
+
+.site-subnavi-item-active {
+  background-color: #d07058;
+}
+
+.site-subnavi-item-active a {
+  color: #ffffff;
+}
+
+.site-subnavi-item-active a:hover,
+.site-subnavi-item-active a:focus {
+  color: #000000;
 }
 
 /* Navigation on the right */
@@ -680,6 +761,20 @@ a {
   background-color: #849d8f;
   position: relative;
   padding-bottom: 35px;
+  position: relative;
+}
+
+.offer-item::before {
+  content: "";
+  position: absolute;
+  width: 62px;
+  height: 62px;
+  background-color: #ffffff;
+  border-radius: 50%;
+  top: 0;
+  left: 0;
+  background-image: url("../img/hit.svg");
+  background-repeat: no-repeat;
 }
 
 .offer-item:hover {
@@ -760,8 +855,50 @@ a {
   list-style: none;
   padding: 0;
   margin: 0;
+  display: flex;
+  justify-content: space-between;
 }
 
+.features-left-column,
+.features-right-column {
+  width: 540px;
+}
+
+.features-item {
+  padding-left: 56px;
+}
+
+.features-left-column .features-item,
+.features-right-column .features-item {
+  position: relative;
+}
+
+.features-left-column .features-item::before,
+.features-right-column .features-item::before {
+  position: absolute;
+  content: "";
+  top: -17px;
+  left: 0;
+  width: 49px;
+  height: 49px;
+  background-color: transparent;
+}
+
+.features-left-column .features-item:first-child::before {
+  background-image: url("../img/ice-cream.svg");
+}
+
+.features-left-column .features-item:last-child::before {
+  background-image: url("../img/eco.svg");
+}
+
+.features-right-column .features-item:first-child::before {
+  background-image: url("../img/cow.svg");
+}
+
+.features-right-column .features-item:last-child::before {
+  background-image: url("../img/thermometer.svg");
+}
 
 /* ------- blog-newsletter ------- */
 
@@ -818,7 +955,6 @@ a {
 .newsletter-wrapper {
   background-color: #f8f7f4;
   border-radius: 10px;
-  padding-top: 32px;
   padding: 32px 20px;
 }
 
@@ -826,14 +962,23 @@ a {
   font-size: 16px;
   line-height: 22px;
   font-weight: 400;
-  color: #000000;
+  color: #5a5a5a;
   margin: 0;
-  margin-bottom: 36px;
+  margin-bottom: 38px;
+}
+
+.newsletter-form {
+  display: flex;
+  justify-content: space-between;
 }
 
 .newsletter-form input {
+  box-sizing: border-box;
   background-color: #ffffff;
   border: 1px solid #d3d3d2;
+  border-radius: 5px;
+  padding: 9px 13px;
+  width: 370px;
 }
 
 .newsletter-form input::placeholder {
@@ -848,7 +993,7 @@ a {
   line-height: 24px;
   font-weight: 700;
 
-  padding: 13px 22px;
+  padding: 9px 19px;
 }
 
 
@@ -864,6 +1009,16 @@ a {
   height: 430px;
   display: block;
   overflow: hidden;
+}
+
+.map::after {
+  position: absolute;
+  content: "";
+  width: 80px;
+  height: 140px;
+  top: 135px;
+  left: 266px;
+  background-image: url("../img/pin.svg");
 }
 
 .address {
@@ -923,7 +1078,92 @@ a {
 }
 
 .feedback-form {
-  display: none; /* временно скрою попап фидбека */
+  display: flex; /* временно скрою попап фидбека */
+  flex-direction: column;
+  align-items: flex-start;
+  position: fixed;
+  top: 50px;
+  left: 50%;
+  margin-left: -235px;
+  box-sizing: border-box;
+  width: 477px;
+  background-color: #f8f7f4;
+  border-radius: 20px;
+  padding: 18px 24px;
+  z-index: 10;
+}
+
+.feedback-form input,
+.feedback-form textarea {
+  padding: 9px 14px;
+  display: block;
+  margin-bottom: 20px;
+  border-radius: 5px;
+  border: 1px solid #d3d3d2;
+}
+
+.feedback-form input {
+  width: 267px;
+  box-sizing: border-box;
+}
+
+.feedback-form textarea {
+  width: 100%;
+  box-sizing: border-box;
+}
+
+.feedback-form input::placeholder,
+.feedback-form textarea::placeholder {
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
+  color: #999999;
+}
+
+.feedback-form-title {
+  font-size: 24px;
+  line-height: 28px;
+  font-weight: 500;
+  color: #323232;
+  padding: 0;
+  margin: 0;
+  margin-bottom: 18px;
+}
+
+.button-feedback-submit {
+  padding: 9px 24px;
+  margin-left: auto;
+}
+
+.button-feedback-close {
+  position: absolute;
+  top: 15px;
+  right: 16px;
+  width: 22px;
+  height: 22px;
+  font-size: 0;
+  background-color: transparent;
+  border: 0;
+  cursor: pointer;
+}
+
+.button-feedback-close::before,
+.button-feedback-close::after {
+  position: absolute;
+  content: "";
+  background-color: #000000;
+  width: 19px;
+  height: 2px;
+  top: 9px;
+  right: 1px;
+}
+
+.button-feedback-close::before {
+  transform: rotate(45deg);
+}
+
+.button-feedback-close::after {
+  transform: rotate(-45deg);
 }
 
 
@@ -1090,9 +1330,32 @@ a {
 .social-item {
   width: 32px;
   height: 32px;
-  background-color: #e6ebe9;
+  background-color: transparent;
   border: 3px solid #c2cec7;
   border-radius: 50%;
+  opacity: 0.8;
+}
+
+.social-item:hover,
+.social-item:focus {
+  opacity: 1;
+  cursor: pointer;
+}
+
+.social-item.twitter {
+  background-image: url("../img/twitter.svg");
+}
+
+.social-item.instagram {
+  background-image: url("../img/instagram.svg");
+}
+
+.social-item.facebook {
+  background-image: url("../img/fb.svg");
+}
+
+.social-item.vkontakte {
+  background-image: url("../img/vk.svg");
 }
 
 .impressum {
@@ -1132,6 +1395,17 @@ a {
 
 .docs-left-column a:first-child {
   font-weight: 700;
+  position: relative;
+}
+
+.docs-left-column a:first-child::before {
+  position: absolute;
+  content: "";
+  width: 15px;
+  height: 13px;
+  top: 5px;
+  left: -24px;
+  background-image: url("../img/heart.svg");
 }
 
 .logo-academy-link {
@@ -1150,6 +1424,10 @@ a {
 
 .copyright-text a {
   color: #ffffff;
+}
+
+.copyright-text a:hover {
+  color: #ffbc9e;
 }
 
 /*
