--- a/css/style.css
+++ b/css/style.css
@@ -169,7 +169,7 @@ a {
   margin: 0;
   padding: 0;
   display: none;
-  z-index: 5;
+  z-index: 2;
 
   position: absolute;
   top: 32px;
@@ -300,7 +300,7 @@ a {
 .search-modal {
   display: none;
   position: absolute;
-  z-index: 5;
+  z-index: 2;
   box-sizing: border-box;
   padding: 20px 15px;
   right: 10px;
@@ -634,7 +634,7 @@ a {
   position: absolute;
   bottom: 63px;
   left: 0;
-  z-index: 20;
+  z-index: 2;
   font-size: 0;
 }
 
@@ -650,6 +650,15 @@ a {
   border: 2px solid #ffffff;
   border-radius: 50%;
   cursor: pointer;
+}
+
+.slider-controls label:hover,
+.slider-controls label:focus {
+  background-color: rgba(255, 255, 255, 0.4);
+}
+
+.slider-controls label:active {
+  background-color: rgba(255, 255, 255, 1);
 }
 
 .slider-list {
@@ -817,7 +826,6 @@ a {
 .offers {
   width: 1146px;
   margin: 0 auto;
-  margin-bottom: 40px;
 }
 
 .offer-hits {
@@ -831,10 +839,11 @@ a {
 /* ------- All pictures of ice ------- */
 .offer-item {
   width: 267px;
-  background-color: #849d8f;
+  background-color: transparent;
   position: relative;
-  padding-bottom: 35px;
+  margin-bottom: 33px;
   position: relative;
+  text-align: center;
 }
 
 .offer-item::before {
@@ -850,11 +859,24 @@ a {
   background-repeat: no-repeat;
 }
 
-.offer-item:hover {
-  background-color: #9bafa3;
-  /*box-shadow: rgba(0, 0, 0, 0.4); */
-  border-radius: 5px;
+.offer-item::after {
+  position: absolute;
+  content: "";
+  top: -6px;
+  left: -13px;
+  width: 293px;
+  height: 406px;
   background-color: rgba(255, 255, 255, 0.2);
+  box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.4);
+  border-radius: 5px;
+  padding-bottom: 20px;
+  display: none;
+  z-index: 2;
+}
+
+.offer-item:hover::after {
+  display: block;
+  cursor: pointer;
 }
 
 .offer-image-wrapper {
@@ -871,6 +893,7 @@ a {
   font-size: 16px;
   line-height: 22px;
   font-weight: 500;
+  color: #ffffff;
 }
 
 .offers a {
@@ -886,13 +909,36 @@ a {
   position: absolute;
   left: 0;
   top: 200px;
-  z-index: 10;
+  z-index: 2;
   margin: 0;
   padding: 0;
 }
 
 .offer-price span {
   font-size: 30px;
+}
+
+.button-offer-wrapper {
+  position: absolute;
+  display: none;
+  right: -6px;
+  bottom: -72px;
+  left: -6px;
+  padding: 20px 0;
+}
+
+.offer-item:hover .button-offer-wrapper {
+  display: block;
+  z-index: 3;
+}
+
+.button-offer {
+  margin: 0 auto;
+  padding: 10px 18px;
+  border: none;
+  font-size: 18px;
+  line-height: 24px;
+  font-weight: 700;
 }
 
 
@@ -1165,7 +1211,7 @@ a {
   background-color: #f8f7f4;
   border-radius: 20px;
   padding: 18px 24px;
-  z-index: 10;
+  z-index: 4;
 }
 
 .feedback-form input,
@@ -1219,6 +1265,7 @@ a {
   font-size: 0;
   background-color: transparent;
   border: 0;
+  cursor: pointer;
 }
 
 .button-feedback-close::before,
@@ -1238,6 +1285,17 @@ a {
 
 .button-feedback-close::after {
   transform: rotate(-45deg);
+}
+
+.overlay {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.3);
+  z-index: 3;
+  display: none;
 }
 
 
